apps/surfsense/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: surfsense-postgres
  namespace: surfsense
spec:
  selector:
    app: surfsense-postgres
  ports:
    - port: 5432
      targetPort: 5432
