apps/surfsense/searxng-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: surfsense-searxng
  namespace: surfsense
spec:
  selector:
    app: surfsense-searxng
  ports:
    - port: 8080
      targetPort: 8080
